@@ -10,18 +10,22 @@ package com.igteam.immersivegeology.common.block.multiblocks.recipe;
 
 import blusunrize.immersiveengineering.api.crafting.IERecipeSerializer;
 import blusunrize.immersiveengineering.api.crafting.IESerializableRecipe;
+import blusunrize.immersiveengineering.api.crafting.TagOutput;
 import blusunrize.immersiveengineering.api.crafting.cache.CachedRecipeList;
 import blusunrize.immersiveengineering.api.utils.FastEither;
 import com.igteam.immersivegeology.core.registration.IGRecipeTypes;
 import net.minecraft.core.Holder;
-import net.minecraft.core.RegistryAccess;
+import net.minecraft.core.HolderLookup;
+import net.minecraft.core.registries.Registries;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.tags.TagKey;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.crafting.RecipeHolder;
+import net.minecraft.world.item.crafting.RecipeSerializer;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.biome.Biome;
-import net.minecraftforge.registries.ForgeRegistries;
-import net.minecraftforge.registries.RegistryObject;
+import net.neoforged.neoforge.registries.DeferredHolder;
 import org.jetbrains.annotations.NotNull;
 
 import javax.annotation.Nonnull;
@@ -31,42 +35,41 @@ import java.util.stream.Collectors;
 
 public class GeothermalBiomeRecipe extends IESerializableRecipe
 {
-	public static RegistryObject<IERecipeSerializer<GeothermalBiomeRecipe>> SERIALIZER;
+	public static DeferredHolder<RecipeSerializer<?>, ? extends IERecipeSerializer<GeothermalBiomeRecipe>> SERIALIZER;
 	public static final CachedRecipeList<GeothermalBiomeRecipe> RECIPES;
-	public final FastEither<Biome, List<TagKey<Biome>>> biomes;
+	public final FastEither<ResourceLocation, List<TagKey<Biome>>> biomes;
 	private final int min_heat;
 	private final int max_heat;
 
-	public GeothermalBiomeRecipe(ResourceLocation id, Biome biome, int min_heat, int max_heat) {
-		super(LAZY_EMPTY, IGRecipeTypes.GEOTHERMAL_EXCHANGER_BIOME, id);
+	public GeothermalBiomeRecipe(ResourceLocation id, ResourceLocation biome, int min_heat, int max_heat) {
+		super(TagOutput.EMPTY, IGRecipeTypes.GEOTHERMAL_EXCHANGER_BIOME);
 		this.biomes = FastEither.left(biome);
 		this.min_heat = min_heat;
 		this.max_heat = max_heat;
 	}
 
 	public GeothermalBiomeRecipe(ResourceLocation id, List<TagKey<Biome>> biomes, int min_heat, int max_heat) {
-		super(LAZY_EMPTY, IGRecipeTypes.GEOTHERMAL_EXCHANGER_BIOME, id);
+		super(TagOutput.EMPTY, IGRecipeTypes.GEOTHERMAL_EXCHANGER_BIOME);
 		this.biomes = FastEither.right(biomes);
 		this.min_heat = min_heat;
 		this.max_heat = max_heat;
 	}
 
-	public List<TagKey<Biome>> getBiomes() {
+	public List<TagKey<Biome>> getBiomes(Level level) {
 		return this.biomes.map(
-				biome -> {
-					Optional<Holder<Biome>> holderOpt = ForgeRegistries.BIOMES.getHolder(biome);
-					return holderOpt.map(biomeHolder -> biomeHolder.getTagKeys()
-							.collect(Collectors.toList())).orElse(Collections.emptyList());
-				},
+				biome -> level.registryAccess().registryOrThrow(Registries.BIOME)
+						.getHolder(ResourceKey.create(Registries.BIOME, biome))
+						.map(holder -> holder.tags().toList())
+						.orElseGet(List::of),
 				Function.identity()
 		);
 	}
 
 	public static GeothermalBiomeRecipe findRecipe(Level level, TagKey<Biome> biome)
 	{
-		for(GeothermalBiomeRecipe recipe : RECIPES.getRecipes(level))
-			if(recipe.getBiomes().contains(biome))
-				return recipe;
+		for(RecipeHolder<GeothermalBiomeRecipe> holder : RECIPES.getRecipes(level))
+			if(holder.value().getBiomes(level).contains(biome))
+				return holder.value();
 		return null;
 	}
 
@@ -83,7 +86,7 @@ public class GeothermalBiomeRecipe extends IESerializableRecipe
 	}
 
 	@Nonnull
-	public ItemStack getResultItem(@NotNull RegistryAccess access) {
+	public ItemStack getResultItem(@NotNull HolderLookup.Provider access) {
 		return ItemStack.EMPTY;
 	}
 
